# Micro-F

./: .gitignore  2zip.bat  CMakeLists.txt  Micro-F.sln  Micro-F.vcproj  Obj2MFMD_Converter.vcproj  README.md  bin2ccode.vcproj  kkrunchy.bat  log_size.sh  readme.txt  size_log.txt  stub.asm  todolist.txt  upx.bat
models/: cube.h  f1949.blend  f1949.h  f2xxx.blend  f2xxx.h  icosahedron.h  leafs.blend  leafs.h  leafs_icosahedron.blend  leafs_icosahedron.h  models.cpp  models.h  plane.blend  rockets.blend  rockets.h  star.blend  star.h  v-1.blend  v-1.h  wrench-hammer.blend  wrench-hammer.h
sounds/: aviators_march.midi  aviatros_march.h  valkyries_flight.h  valkyries_flight.midi
src/: aircraft.cpp  aircraft.h  autopilot.cpp  autopilot.h  bin2ccode.cpp  drawing_model.cpp  drawing_model.h  enemy.cpp  enemy.h  font_data.h  game_logic.cpp  game_logic.h  glsl_program.cpp  glsl_program.h  gui.cpp  gui.h  level.cpp  level.h  main.cpp  main_loop.cpp  main_loop.h  mf_math.cpp  mf_math.h  mf_model.h  micro-f.h  models_generation.cpp  models_generation.h  music_engine.cpp  music_engine.h  obj2mfmd_converter.cpp  particles_manager.cpp  particles_manager.h  player.cpp  player.h  renderer.cpp  renderer.h  settings.h  shaders.cpp  shaders.h  sound_engine.cpp  (+13 more)
src/gl/: func_addresses.cpp  func_declarations.h
textures/: aircraft_direction.h  back_speed.h  cursor.h  enemy_back.h  enemy_front.h  fixedsys8x18c.h  front_speed.h  moon.h
